--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,12 @@ rad.json
 *.flf
 #Test results file
 TestResults.xml
+
+# macOS
+.DS_Store
+**/.DS_Store
+
+# Frame images (not needed in git)
+**/frame_*.png
+**/frame_*.jpeg
+**/frame_*.jpg
